Fix header crumb squashing on smaller devices (#1679)

--- a/assets/styles/components/_header.scss
+++ b/assets/styles/components/_header.scss
@@ -51,6 +51,7 @@
     grid-template-columns: min-content max-content max-content auto max-content;
     position: relative;
     height: 100%;
+    max-width: 100vw;
 
     & > menu {
       @include b.media-breakpoint-down(lg) {
@@ -305,7 +306,8 @@
       color: var(--kbin-meta-text-color);
 
       span {
-        padding-left: 1rem;
+        padding-left: .5rem;
+        width: max-content;
       }
 
       a {
@@ -318,6 +320,7 @@
   .head-nav {
 
     @include b.media-breakpoint-down(lg) {
+      overflow: hidden;
 
       &__menu {
         display: none;
